test/positive/i50_stop_following_references.cfr
http://gsd.uwaterloo.ca:8888/question/214/stop-automatically-following-references-during

abstract A
    b ?

A1 : A
    [ ! b ]

C
    b  ?
    [ C.b ]
    a -> A
        [ b ]
        d
            b ?
