test/failing/negative/i240.cfr
// [i240] http://gsd.uwaterloo.ca:8888/question/1013/ref-as-clafer-name

d

abstract c -> d

abstract a
	c : c